--- a/po/mintupdate-nl.po
+++ b/po/mintupdate-nl.po
@@ -1,20 +1,22 @@
-# Dutch translation for linuxmint
-# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
-# This file is distributed under the same license as the linuxmint package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+# Dutch translation for mintupdate (Bodhi's fork of gm10's fork)
+# Copyright (c) 2021 Bodhi Linux
+# This file is distributed under the same license as the mintupdate package (Bodhi's fork of gm10's fork).
+# Pjotr <pjotrvertaalt@gmail.com>, 2021.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gm10-linuxmint-tools\n"
+"Project-Id-Version: mintupdate\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2020-01-08 11:56+0100\n"
-"PO-Revision-Date: 2019-12-20 16:40+0000\n"
-"Last-Translator: gm10 <Unknown>\n"
+"PO-Revision-Date: 2021-06-08 23:27+0200\n"
+"Last-Translator: Pjotr <pjotrvertaalt@gmail.com>\n"
 "Language-Team: Dutch\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Language: nl\n"
+"X-Generator: Poedit 2.3\n"
 
 #: doc/help/C/mintupdate/updates.page:10(name)
 #: doc/help/C/mintupdate/snapshots.page:10(name)
@@ -36,29 +38,28 @@ msgstr "root@linuxmint.com"
 
 #: doc/help/C/mintupdate/updates.page:16(desc)
 msgid "There are different types of updates"
-msgstr "Er zijn verschillende soorten bijgewerkte pakketten"
+msgstr "Er zijn verschillende soorten actualiseringen"
 
 #: doc/help/C/mintupdate/updates.page:19(title)
 msgid "The different types of updates"
-msgstr "De verschillende soorten bijgewerkte pakketten"
+msgstr "De verschillende soorten actualiseringen"
 
 #: doc/help/C/mintupdate/updates.page:21(p)
 msgid "There are different types of updates:"
-msgstr "Er zijn verschillende soorten bijgewerkte pakketten:"
+msgstr "Er zijn verschillende soorten actualiseringen:"
 
 #: doc/help/C/mintupdate/updates.page:24(p)
 msgid ""
 "'Software updates' are updates which fix bugs (or also sometimes which bring "
 "new features)."
 msgstr ""
-"'Foutreparaties' zijn bijgewerkte pakketten die fouten herstellen (en soms "
-"ook nieuwe functies toevoegen)."
+"'Foutreparaties' zijn actualiseringen die fouten herstellen (en soms ook "
+"nieuwe functies toevoegen)."
 
 #: doc/help/C/mintupdate/updates.page:25(p)
 msgid "'Security updates' are updates which patch vulnerabilities."
 msgstr ""
-"'Veiligheidsreparaties' zijn bijgewerkte pakketten die kwetsbaarheden "
-"verhelpen."
+"'Veiligheidsreparaties' zijn actualiseringen die kwetsbaarheden verhelpen."
 
 #: doc/help/C/mintupdate/updates.page:26(p)
 msgid "'Kernel updates' represent the installation of a newer kernel."
@@ -144,7 +145,7 @@ msgid ""
 "your computer, you can restore the operating system from any snapshot, thus "
 "cancelling the problem as if it never happened."
 msgstr ""
-"Indien een bijgewerkt pakket, een vergissing, een fout of zelfs (hoogst "
+"Indien een actualisering, een vergissing, een fout of zelfs (hoogst "
 "onwaarschijnlijk, maar je weet maar nooit) een kwaadaardig programma iets "
 "kapot maakt op uw computer, dan kunt u het besturingssysteem herstellen "
 "vanuit elke eerder gemaakte momentopname, waardoor het probleem in één klap "
@@ -161,8 +162,7 @@ msgstr ""
 
 #: doc/help/C/mintupdate/regressions.page:16(desc)
 msgid "When an update breaks something, it's called a \"regression\"."
-msgstr ""
-"Wanneer een bijgewerkt pakket iets kapot maakt, heet dat een 'regressie'."
+msgstr "Wanneer een actualisering iets kapot maakt, heet dat een 'regressie'."
 
 #: doc/help/C/mintupdate/regressions.page:19(title)
 msgid "Software regressions"
@@ -173,8 +173,8 @@ msgid ""
 "Updates keep your computer safe, eliminate bugs and even sometimes add new "
 "features to your operating system."
 msgstr ""
-"Bijgewerkte pakketten houden uw computer veilig, lossen fouten op en voegen "
-"soms zelfs nieuwe functies toe aan uw besturingssysteem."
+"Actualiseringen houden uw computer veilig, lossen fouten op en voegen soms "
+"zelfs nieuwe functies toe aan uw besturingssysteem."
 
 #: doc/help/C/mintupdate/regressions.page:23(p)
 msgid ""
@@ -258,13 +258,13 @@ msgstr ""
 
 #: doc/help/C/mintupdate/mintupdate-cli.page:27(title)
 msgid "Listing updates"
-msgstr "Bijgewerkte pakketten weergeven in een lijst"
+msgstr "Actualiseringen weergeven in een lijst"
 
 #: doc/help/C/mintupdate/mintupdate-cli.page:29(p)
 msgid "You can use the \"list\" command to list updates:"
 msgstr ""
-"U kunt de opdracht 'list' gebruiken om bijgewerkte pakketten weer te geven "
-"in een lijst:"
+"U kunt de opdracht 'list' gebruiken om actualiseringen weer te geven in een "
+"lijst:"
 
 #: doc/help/C/mintupdate/mintupdate-cli.page:31(screen)
 #, no-wrap
@@ -273,8 +273,7 @@ msgstr "mintupdate-cli list"
 
 #: doc/help/C/mintupdate/mintupdate-cli.page:33(p)
 msgid "You can use -s to only show the security updates."
-msgstr ""
-"U kunt -s gebruiken om uitsluitend de veiligheidsreparaties te tonen."
+msgstr "U kunt -s gebruiken om uitsluitend de veiligheidsreparaties te tonen."
 
 #: doc/help/C/mintupdate/mintupdate-cli.page:35(p)
 msgid "You can use -k to only show the kernel updates."
@@ -293,14 +292,14 @@ msgstr "mintupdate-cli list -s"
 
 #: doc/help/C/mintupdate/mintupdate-cli.page:45(title)
 msgid "Applying updates"
-msgstr "Bijgewerkte pakketten installeren"
+msgstr "Actualiseringen installeren"
 
 #: doc/help/C/mintupdate/mintupdate-cli.page:47(p)
 msgid ""
 "You can use the \"upgrade\" command to apply updates, using the same options."
 msgstr ""
-"U kunt de opdracht 'upgrade' gebruiken om bijgewerkte pakketten te "
-"installeren, met gebruikmaking van dezelfde parameters."
+"U kunt de opdracht 'upgrade' gebruiken om actualiseringen te installeren, "
+"met gebruikmaking van dezelfde parameters."
 
 #: doc/help/C/mintupdate/mintupdate-cli.page:49(p)
 msgid "For instance, the following command applies kernel updates:"
@@ -383,7 +382,7 @@ msgid ""
 "When you apply an update, you replace the old version of the software with "
 "the new version."
 msgstr ""
-"Bij normale programmatuur, vervangt een bijgewerkt pakket de reeds aanwezige "
+"Bij normale programmatuur, vervangt een actualisering de reeds aanwezige "
 "oudere versie."
 
 #: doc/help/C/mintupdate/kernels.page:36(p)
@@ -426,7 +425,7 @@ msgstr ""
 #: doc/help/C/mintupdate/kernels.page:49(screen)
 #, no-wrap
 msgid "uname -a"
-msgstr "uname -r"
+msgstr "uname -a"
 
 #: doc/help/C/mintupdate/kernels.page:54(title)
 msgid "Installing and removing kernels"
@@ -587,9 +586,8 @@ msgid ""
 "Updates are important because they keep your computer safe, eliminate bugs "
 "and can even add new features to your operating system."
 msgstr ""
-"Bijgewerkte pakketten zijn belangrijk omdat ze uw computer veilig houden, "
-"fouten oplossen en soms zelfs nieuwe functies toevoegen aan uw "
-"besturingssysteem."
+"Actualiseringen zijn belangrijk omdat ze uw computer veilig houden, fouten "
+"oplossen en soms zelfs nieuwe functies toevoegen aan uw besturingssysteem."
 
 #: doc/help/C/mintupdate/index.page:24(p)
 msgid ""
@@ -606,9 +604,9 @@ msgid ""
 "can restore your system in case something goes wrong."
 msgstr ""
 "Om uw computer veilig te houden en in goede conditie, wordt aangeraden om "
-"alle beschikbare bijgewerkte pakketten te installeren en om momentopnamen in "
-"te stellen van het systeem, zodat u uw systeem kunt terugzetten in het geval "
-"er iets mis gaat."
+"alle beschikbare actualiseringen te installeren en om momentopnamen in te "
+"stellen van het systeem, zodat u uw systeem kunt terugzetten in het geval er "
+"iets mis gaat."
 
 #: doc/help/C/mintupdate/index.page:29(title)
 msgid "Core concepts"
@@ -635,10 +633,7 @@ msgstr "Dit onderdeel verklaart geavanceerde technieken."
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
 #: doc/help/C/mintupdate/index.page:0(None)
 msgid "translator-credits"
-msgstr ""
-"Launchpad Contributions:\n"
-"  Pjotr12345 https://launchpad.net/~computertip\n"
-"  gm10 https://launchpad.net/~gm10"
+msgstr "Pjotr <pjotrvertaalt@gmail.com>"
 
 #: usr/lib/linuxmint/mintUpdate/checkAPT.py:320
 msgid ""
@@ -742,8 +737,8 @@ msgid ""
 "You have installed updates that require a reboot to take effect, please "
 "reboot your system as soon as possible."
 msgstr ""
-"U hebt bijgewerkte pakketten geïnstalleerd die een herstart vergen om van "
-"kracht te worden. Herstart a.u.b. uw systeem zo spoedig mogelijk."
+"U hebt actualiseringen geïnstalleerd die een herstart vergen om van kracht "
+"te worden. Herstart a.u.b. uw systeem zo spoedig mogelijk."
 
 #: usr/lib/linuxmint/mintUpdate/notifier.py:33
 msgid "Automatic updates error"
@@ -825,8 +820,7 @@ msgstr "Kon de dagelijkse Mainline-bouwsellijst niet ophalen."
 
 #: usr/lib/linuxmint/mintUpdate/common/MainlineKernels.py:250
 msgid "Failed to retrieve mainline kernel support status."
-msgstr ""
-"Kon de ondersteuningsstatus niet ophalen voor Mainline-systeemkernen."
+msgstr "Kon de ondersteuningsstatus niet ophalen voor Mainline-systeemkernen."
 
 #: usr/lib/linuxmint/mintUpdate/common/MainlineKernels.py:257
 msgid "Failed to parse mainline kernel support status."
@@ -1016,12 +1010,12 @@ msgstr "Installatie afgebroken"
 
 #: usr/lib/linuxmint/mintUpdate/main/InstallThread.py:155
 msgid "Installing updates"
-msgstr "Bijgewerkte pakketten installeren…"
+msgstr "Actualiseringen installeren…"
 
 #: usr/lib/linuxmint/mintUpdate/main/InstallThread.py:268
 #: usr/lib/linuxmint/mintUpdate/main/InstallThread.py:271
 msgid "Could not install the updates"
-msgstr "Kon de bijgewerkte pakketten niet installeren"
+msgstr "Kon de actualiseringen niet installeren"
 
 #: usr/lib/linuxmint/mintUpdate/main/InstallThread.py:285
 msgid "Automated System Snapshot"
@@ -1032,7 +1026,7 @@ msgid ""
 "Do you want a system snapshot to be created before installing the updates?"
 msgstr ""
 "Wilt u dat er een momentopname van het systeem wordt gemaakt voordat u de "
-"bijgewerkte pakketten installeert?"
+"actualiseringen installeert?"
 
 #: usr/lib/linuxmint/mintUpdate/main/InstallThread.py:297
 msgid "This upgrade will trigger additional changes"
@@ -1169,14 +1163,14 @@ msgstr "Over"
 #: usr/lib/linuxmint/mintUpdate/main/MintUpdate.py:461
 #: usr/lib/linuxmint/mintUpdate/main/MintUpdate.py:617
 msgid "No updates selected"
-msgstr "Geen bijgewerkte pakketten geselecteerd"
+msgstr "Geen actualiseringen geselecteerd"
 
 #: usr/lib/linuxmint/mintUpdate/main/MintUpdate.py:464
 #, python-format
 msgid "%(selected)d update selected (%(size)s)"
 msgid_plural "%(selected)d updates selected (%(size)s)"
-msgstr[0] "%(selected)d bijgewerkt pakket geselecteerd (%(size)s)"
-msgstr[1] "%(selected)d bijgewerkte pakketten geselecteerd (%(size)s)"
+msgstr[0] "%(selected)d actualisering geselecteerd (%(size)s)"
+msgstr[1] "%(selected)d actualiseringen geselecteerd (%(size)s)"
 
 #: usr/lib/linuxmint/mintUpdate/main/MintUpdate.py:747
 msgid "Downloading changelog…"
@@ -1274,7 +1268,7 @@ msgstr "Vereist dat Programmabeheer (mintinstall) is geïnstalleerd"
 
 #: usr/lib/linuxmint/mintUpdate/main/Preferences.py:145
 msgid "Ignored Updates"
-msgstr "Genegeerde bijgewerkte pakketten"
+msgstr "Genegeerde actualiseringen"
 
 #: usr/lib/linuxmint/mintUpdate/main/Preferences.py:377
 #, python-format
@@ -1296,7 +1290,7 @@ msgstr ""
 
 #: usr/lib/linuxmint/mintUpdate/main/Preferences.py:464
 msgid "Ignore an Update"
-msgstr "Een bijgewerkt pakket negeren"
+msgstr "Een actualisering negeren"
 
 #: usr/lib/linuxmint/mintUpdate/main/Preferences.py:465
 msgid ""
@@ -1345,7 +1339,7 @@ msgstr "Foutreparatie"
 
 #: usr/lib/linuxmint/mintUpdate/main/RefreshThread.py:145
 msgid "3rd-party update"
-msgstr "Bijgewerkt pakket van derden"
+msgstr "Actualisering van derden"
 
 #: usr/lib/linuxmint/mintUpdate/main/RefreshThread.py:185
 msgid "Your distribution has reached end of life and is no longer supported"
@@ -1362,11 +1356,11 @@ msgstr "Uw systeem is bijgewerkt"
 #: usr/lib/linuxmint/mintUpdate/main/RefreshThread.py:321
 #: usr/share/linuxmint/mintupdate/main.ui.h:6
 msgid "Could not refresh the list of updates"
-msgstr "Kon de lijst met bijgewerkte pakketten niet verversen"
+msgstr "Kon de lijst met actualiseringen niet verversen"
 
 #: usr/lib/linuxmint/mintUpdate/main/RefreshThread.py:245
 msgid "Checking for updates"
-msgstr "Zoeken naar beschikbare bijgewerkte pakketten…"
+msgstr "Zoeken naar beschikbare actualiseringen…"
 
 #: usr/lib/linuxmint/mintUpdate/main/RefreshThread.py:265
 #: usr/share/linuxmint/mintupdate/main.ui.h:8
@@ -1381,8 +1375,8 @@ msgstr "Logboek van wijzigingen aan het ophalen…"
 #, python-format
 msgid "%d update available"
 msgid_plural "%d updates available"
-msgstr[0] "%d bijgewerkt pakket beschikbaar"
-msgstr[1] "%d bijgewerkte pakketten beschikbaar"
+msgstr[0] "%d actualisering beschikbaar"
+msgstr[1] "%d actualiseringen beschikbaar"
 
 #: usr/lib/linuxmint/mintUpdate/main/RefreshThread.py:327
 msgid "APT's cache or configuration are corrupt."
@@ -1626,7 +1620,7 @@ msgstr "Installatie of verwijdering van systeemkern is gaande"
 
 #: generate_desktop_files:21
 msgid "Show and install available updates"
-msgstr "Beschikbare bijgewerkte pakketten tonen en installeren"
+msgstr "Beschikbare actualiseringen tonen en installeren"
 
 #: generate_desktop_files:131
 msgid "Install and remove kernels"
@@ -1639,7 +1633,7 @@ msgstr "Bijwerk- en systeemkernbeheer"
 #: usr/share/linuxmint/mintupdate/history.ui.h:2
 #: usr/share/linuxmint/mintupdate/main.ui.h:7
 msgid "Refreshing the list of updates"
-msgstr "De lijst van bijgewerkte pakketten verversen"
+msgstr "De lijst van actualiseringen verversen"
 
 #: usr/share/linuxmint/mintupdate/history.ui.h:3
 msgid "Right click an entry to show the changelog"
@@ -1721,7 +1715,7 @@ msgstr "Alles kiezen"
 #: usr/share/linuxmint/mintupdate/main.ui.h:5
 #: usr/share/linuxmint/mintupdate/shortcuts.ui.h:4
 msgid "Install Updates"
-msgstr "Bijgewerkte pakketten installeren"
+msgstr "Actualiseringen installeren"
 
 #: usr/share/linuxmint/mintupdate/main.ui.h:9
 msgid "Update and Restart Update Manager"
@@ -1764,8 +1758,7 @@ msgstr "Installatie van Mainline-systeemkernen toestaan"
 
 #: usr/share/linuxmint/mintupdate/preferences.kernels.ui.h:5
 msgid "Include the latest unreleased series (release candidate)"
-msgstr ""
-"Neem ook de nieuwste nog niet vrijgegeven reeks op (vrijgavekandidaat)"
+msgstr "Neem ook de nieuwste nog niet vrijgegeven reeks op (vrijgavekandidaat)"
 
 #: usr/share/linuxmint/mintupdate/preferences.kernels.ui.h:6
 msgid ""
@@ -1831,7 +1824,7 @@ msgid ""
 msgstr ""
 "Merk buitendien op dat omschakelen naar een andere specialistische "
 "systeemkern, ertoe kan leiden dat er een metapakket voor die systeemkern "
-"wordt toegevoegd aan uw lijst van bijgewerkte pakketten."
+"wordt toegevoegd aan uw lijst van actualiseringen."
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:1
 msgid "Interface"
@@ -1841,7 +1834,7 @@ msgstr "Bedieningsschil"
 msgid "Hide the main window when installing or removing updates or kernels"
 msgstr ""
 "Verberg het hoofdvenster tijdens het installeren of verwijderen van "
-"bijgewerkte pakketten of systeemkernen"
+"actualiseringen of systeemkernen"
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:3
 msgid ""
@@ -1863,8 +1856,8 @@ msgstr "Toon bureaubladmeldingen"
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:6
 msgid "Only show a tray icon when updates are available or in case of errors"
 msgstr ""
-"Toon alleen een systeemvakpictogram wanneer er bijgewerkte pakketten "
-"beschikbaar zijn of in geval van fouten"
+"Toon alleen een systeemvakpictogram wanneer er actualiseringen beschikbaar "
+"zijn of in geval van fouten"
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:7
 msgid ""
@@ -1875,7 +1868,7 @@ msgstr ""
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:8
 msgid "Update details default tab:"
-msgstr "Standaard-tabblad van bijzonderheden inzake bijgewerkte pakketten:"
+msgstr "Standaard-tabblad van bijzonderheden inzake actualiseringen:"
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:9
 msgid "Self-Updates"
@@ -1891,7 +1884,7 @@ msgid ""
 "Automatically create a system snapshot before manually installing updates"
 msgstr ""
 "Maak automatisch een momentopname van het systeem alvorens handmatig "
-"bijgewerkte pakketten te installeren"
+"actualiseringen te installeren"
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:13
 msgid "Maximum number of those snapshots to keep:"
@@ -1908,8 +1901,8 @@ msgstr "Verversingsrooster"
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:16
 msgid "Enable scheduled refresh of the list of available updates"
 msgstr ""
-"Geagendeerde verversing inschakelen van de lijst van beschikbare bijgewerkte "
-"pakketten"
+"Geagendeerde verversing inschakelen van de lijst van beschikbare "
+"actualiseringen"
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:17
 msgid ""
@@ -1984,7 +1977,7 @@ msgid ""
 "With this option all updates are applied automatically on a daily basis via "
 "a system service."
 msgstr ""
-"Met deze optie worden alle bijgewerkte pakketten dagelijks automatisch "
+"Met deze optie worden alle actualiseringen dagelijks automatisch "
 "geïnstalleerd via een systeemdienst."
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:31
@@ -1997,7 +1990,7 @@ msgstr ""
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:32
 msgid "Apply updates automatically"
-msgstr "Bijgewerkte pakketten automatisch installeren"
+msgstr "Actualiseringen automatisch installeren"
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:33
 msgid "Only include kernel updates"
@@ -2066,8 +2059,8 @@ msgid ""
 "updates that you know cause issues on your system."
 msgstr ""
 "Pakketten die hier staan opgesomd zullen nimmer worden bijgewerkt. Gebruik "
-"deze optie om bijgewerkte pakketten te blokkeren waarvan u weet dat ze "
-"problemen veroorzaken in uw systeem."
+"deze optie om actualiseringen te blokkeren waarvan u weet dat ze problemen "
+"veroorzaken in uw systeem."
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:48
 msgid ""
@@ -2075,8 +2068,8 @@ msgid ""
 "in the updates listing."
 msgstr ""
 "Het wordt aangeraden om pakketten toe te voegen aan de negeerlijst door erop "
-"te klikken met de rechtermuisknop, in de lijst met beschikbare bijgewerkte "
-"pakketten."
+"te klikken met de rechtermuisknop, in de lijst met beschikbare "
+"actualiseringen."
 
 #: usr/share/linuxmint/mintupdate/preferences.ui.h:50
 msgid "Add…"
